@@ -5,6 +5,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -13,47 +15,52 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import javax.annotation.Resource;
+
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
-import org.apache.pdfbox.io.MemoryUsageSetting;
-import org.apache.pdfbox.multipdf.PDFMergerUtility;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.jdbc.core.RowMapper;
+import org.springframework.stereotype.Component;
 
 import com.logicaldoc.core.PersistenceException;
 import com.logicaldoc.core.conversion.FormatConverterManager;
-import com.logicaldoc.core.document.dao.DocumentDAO;
-import com.logicaldoc.core.document.dao.DocumentHistoryDAO;
-import com.logicaldoc.core.document.dao.DocumentNoteDAO;
-import com.logicaldoc.core.document.dao.VersionDAO;
 import com.logicaldoc.core.folder.Folder;
 import com.logicaldoc.core.folder.FolderDAO;
+import com.logicaldoc.core.folder.FolderEvent;
+import com.logicaldoc.core.folder.FolderHistory;
+import com.logicaldoc.core.history.History;
 import com.logicaldoc.core.metadata.Attribute;
 import com.logicaldoc.core.metadata.Template;
 import com.logicaldoc.core.metadata.TemplateDAO;
-import com.logicaldoc.core.parser.ParseException;
 import com.logicaldoc.core.parser.ParseParameters;
 import com.logicaldoc.core.parser.Parser;
 import com.logicaldoc.core.parser.ParserFactory;
+import com.logicaldoc.core.parser.ParsingException;
 import com.logicaldoc.core.searchengine.SearchEngine;
-import com.logicaldoc.core.security.Group;
 import com.logicaldoc.core.security.Permission;
 import com.logicaldoc.core.security.Session;
 import com.logicaldoc.core.security.SessionManager;
-import com.logicaldoc.core.security.User;
+import com.logicaldoc.core.security.TenantDAO;
 import com.logicaldoc.core.security.authorization.PermissionException;
-import com.logicaldoc.core.security.dao.TenantDAO;
-import com.logicaldoc.core.security.dao.UserDAO;
-import com.logicaldoc.core.store.Storer;
+import com.logicaldoc.core.security.menu.Menu;
+import com.logicaldoc.core.security.menu.MenuDAO;
+import com.logicaldoc.core.security.user.Group;
+import com.logicaldoc.core.security.user.User;
+import com.logicaldoc.core.security.user.UserDAO;
+import com.logicaldoc.core.store.Store;
 import com.logicaldoc.core.threading.ThreadPools;
 import com.logicaldoc.core.ticket.Ticket;
 import com.logicaldoc.core.ticket.TicketDAO;
+import com.logicaldoc.core.util.MergeUtil;
 import com.logicaldoc.util.Context;
 import com.logicaldoc.util.config.ContextProperties;
 import com.logicaldoc.util.html.HTMLSanitizer;
@@ -67,7 +74,10 @@ import com.logicaldoc.util.time.TimeDiff.TimeField;
  * @author Marco Meschieri - LogicalDOC
  * @since 3.5
  */
+@Component("documentManager")
 public class DocumentManagerImpl implements DocumentManager {
+
+	private static final String UPDATE_LD_DOCUMENT_SET_LD_INDEXED = "update ld_document set ld_indexed=";
 
 	private static final String NO_VALUE_OBJECT_HAS_BEEN_PROVIDED = "No value object has been provided";
 
@@ -81,53 +91,58 @@ public class DocumentManagerImpl implements DocumentManager {
 
 	protected static Logger log = LoggerFactory.getLogger(DocumentManagerImpl.class);
 
+	@Resource(name = "DocumentDAO")
 	private DocumentDAO documentDAO;
 
+	@Resource(name = "DocumentLinkDAO")
+	private DocumentLinkDAO documentLinkDAO;
+
+	@Resource(name = "DocumentNoteDAO")
 	private DocumentNoteDAO documentNoteDAO;
 
+	@Resource(name = "FolderDAO")
 	private FolderDAO folderDAO;
 
+	@Resource(name = "TemplateDAO")
 	private TemplateDAO templateDAO;
 
+	@Resource(name = "documentListenerManager")
 	private DocumentListenerManager listenerManager;
 
+	@Resource(name = "VersionDAO")
 	private VersionDAO versionDAO;
 
+	@Resource(name = "UserDAO")
 	private UserDAO userDAO;
 
+	@Resource(name = "TicketDAO")
 	private TicketDAO ticketDAO;
 
+	@Resource(name = "SearchEngine")
 	private SearchEngine indexer;
 
-	private Storer storer;
+	@Resource(name = "Store")
+	private Store store;
 
+	@Resource(name = "ContextProperties")
 	private ContextProperties config;
-
-	public void setListenerManager(DocumentListenerManager listenerManager) {
-		this.listenerManager = listenerManager;
-	}
-
-	public void setDocumentDAO(DocumentDAO documentDAO) {
+	
+	public DocumentManagerImpl(DocumentDAO documentDAO, DocumentLinkDAO documentLinkDAO,
+			DocumentNoteDAO documentNoteDAO, FolderDAO folderDAO, TemplateDAO templateDAO,
+			DocumentListenerManager listenerManager, VersionDAO versionDAO, UserDAO userDAO, TicketDAO ticketDAO,
+			SearchEngine indexer, Store store, ContextProperties config) {
+		super();
 		this.documentDAO = documentDAO;
-	}
-
-	public void setTemplateDAO(TemplateDAO templateDAO) {
+		this.documentLinkDAO = documentLinkDAO;
+		this.documentNoteDAO = documentNoteDAO;
+		this.folderDAO = folderDAO;
 		this.templateDAO = templateDAO;
-	}
-
-	public void setIndexer(SearchEngine indexer) {
-		this.indexer = indexer;
-	}
-
-	public void setVersionDAO(VersionDAO versionDAO) {
+		this.listenerManager = listenerManager;
 		this.versionDAO = versionDAO;
-	}
-
-	public void setStorer(Storer storer) {
-		this.storer = storer;
-	}
-
-	public void setConfig(ContextProperties config) {
+		this.userDAO = userDAO;
+		this.ticketDAO = ticketDAO;
+		this.indexer = indexer;
+		this.store = store;
 		this.config = config;
 	}
 
@@ -160,13 +175,14 @@ public class DocumentManagerImpl implements DocumentManager {
 		Document document = documentDAO.findDocument(docId);
 
 		if (document.getImmutable() == 0 && document.getStatus() == AbstractDocument.DOC_UNLOCKED) {
-			// Remove the files of the same fileVersion
-			List<String> resources = storer.listResources(document.getId(), fileVersion);
-			for (String resource : resources)
-				storer.delete(document.getId(), resource);
+			// Remove the ancillary files of the same fileVersion
+			final String newFilerResourceName = store.getResourceName(document, fileVersion, null);
+			for (String resource : store.listResources(document.getId(), fileVersion).stream()
+					.filter(r -> !r.equals(newFilerResourceName)).toList())
+				store.delete(document.getId(), resource);
 
 			// Store the new file
-			storer.store(newFile, document.getId(), storer.getResourceName(document, fileVersion, null));
+			store.store(newFile, document.getId(), newFilerResourceName);
 
 			long fileSize = newFile.length();
 
@@ -195,7 +211,7 @@ public class DocumentManagerImpl implements DocumentManager {
 		}
 	}
 
-	private void validateTransaction(DocumentHistory transaction) {
+	private void validateTransaction(History transaction) {
 		if (transaction == null)
 			throw new IllegalArgumentException(TRANSACTION_CANNOT_BE_NULL);
 		if (transaction.getUser() == null)
@@ -316,8 +332,8 @@ public class DocumentManagerImpl implements DocumentManager {
 				document.setSigned(oldDocument.getSigned());
 				document.setComment(oldDocument.getComment());
 				documentDAO.store(document);
-				throw new PersistenceException(
-						String.format("Cannot save the new version %s into the storage", document), ioe);
+				throw new PersistenceException(String.format("Cannot save the new version %s into the store", document),
+						ioe);
 			}
 
 			version.setFileSize(document.getFileSize());
@@ -406,8 +422,8 @@ public class DocumentManagerImpl implements DocumentManager {
 	}
 
 	private void storeFile(Document doc, File file) throws IOException {
-		String resource = storer.getResourceName(doc, null, null);
-		storer.store(file, doc.getId(), resource);
+		String resource = store.getResourceName(doc, null, null);
+		store.store(file, doc.getId(), resource);
 	}
 
 	/**
@@ -433,7 +449,7 @@ public class DocumentManagerImpl implements DocumentManager {
 	}
 
 	@Override
-	public String parseDocument(Document doc, String fileVersion) throws ParseException {
+	public String parseDocument(Document doc, String fileVersion) throws ParsingException {
 		String content = null;
 
 		// Check if the document is an alias
@@ -442,33 +458,34 @@ public class DocumentManagerImpl implements DocumentManager {
 			try {
 				doc = documentDAO.findById(docref);
 				if (doc == null)
-					throw new ParseException(String.format("Unexisting referenced document %s", docref));
-			} catch (ParseException pe) {
+					throw new ParsingException(String.format("Unexisting referenced document %s", docref));
+			} catch (ParsingException pe) {
 				throw pe;
 			} catch (PersistenceException e) {
-				throw new ParseException(e.getMessage(), e);
+				throw new ParsingException(e.getMessage(), e);
 			}
 		}
 
 		// Parses the file where it is already stored
 		Locale locale = doc.getLocale();
-		String resource = storer.getResourceName(doc, fileVersion, null);
+		String resource = store.getResourceName(doc, fileVersion, null);
 		Parser parser = ParserFactory.getParser(doc.getFileName());
 
 		// and gets some fields
 		if (parser != null) {
 			log.debug("Using parser {} to parse document {}", parser.getClass().getName(), doc.getId());
 
-			TenantDAO tDao = (TenantDAO) Context.get().getBean(TenantDAO.class);
+			TenantDAO tDao = Context.get(TenantDAO.class);
 			try {
-				content = parser.parse(storer.getStream(doc.getId(), resource), new ParseParameters(doc,
+				content = parser.parse(store.getStream(doc.getId(), resource), new ParseParameters(doc,
 						doc.getFileName(), fileVersion, null, locale, tDao.findById(doc.getTenantId()).getName()));
 			} catch (Exception e) {
-				log.error("Cannot parse document {}", doc, e);
-				if (e instanceof ParseException)
-					throw (ParseException) e;
+				log.error("Cannot parse document {}", doc);
+				log.error(e.getMessage(), e);
+				if (e instanceof ParsingException pe)
+					throw pe;
 				else
-					throw new ParseException(e);
+					throw new ParsingException(e);
 			}
 		}
 
@@ -481,7 +498,7 @@ public class DocumentManagerImpl implements DocumentManager {
 
 	@Override
 	public long index(long docId, String content, DocumentHistory transaction)
-			throws PersistenceException, ParseException {
+			throws PersistenceException, ParsingException {
 		Document doc = getExistingDocument(docId);
 
 		log.debug("Indexing document {} - {}", doc.getId(), doc.getFileName());
@@ -507,9 +524,8 @@ public class DocumentManagerImpl implements DocumentManager {
 				} else {
 					log.debug("Alias {} cannot be indexed because it references an unexisting document {}", doc,
 							doc.getDocRef());
-					documentDAO.initialize(doc);
-					doc.setIndexed(AbstractDocument.INDEX_SKIP);
-					documentDAO.store(doc);
+					documentDAO.jdbcUpdate(UPDATE_LD_DOCUMENT_SET_LD_INDEXED + AbstractDocument.INDEX_SKIP
+							+ " where ld_id=" + doc.getId());
 					return 0;
 				}
 			}
@@ -522,24 +538,28 @@ public class DocumentManagerImpl implements DocumentManager {
 				parsingTime = TimeDiff.getTimeDifference(beforeParsing, new Date(), TimeField.MILLISECOND);
 			}
 
+			documentDAO.initialize(doc);
+
 			// This may take time
 			addHit(doc, cont);
-		} catch (PersistenceException | ParseException e) {
+		} catch (PersistenceException | ParsingException e) {
 			recordIndexingError(transaction, doc, e);
 			throw e;
 		}
 
 		// For additional safety update the DB directly
 		doc.setIndexed(AbstractDocument.INDEX_INDEXED);
+		documentDAO.jdbcUpdate(UPDATE_LD_DOCUMENT_SET_LD_INDEXED + doc.getIndexed() + " where ld_id=" + doc.getId());
 
+		// Save the event
 		if (transaction != null) {
 			transaction.setEvent(DocumentEvent.INDEXED.toString());
 			transaction.setComment(HTMLSanitizer.sanitize(StringUtils.abbreviate(cont, 100)));
 			transaction.setReason(Integer.toString(currentIndexed));
 			transaction.setDocument(doc);
 		}
-
-		documentDAO.store(doc, transaction);
+		DocumentHistoryDAO hDao = Context.get(DocumentHistoryDAO.class);
+		hDao.store(transaction);
 
 		/*
 		 * Mark the aliases to be re-indexed
@@ -558,14 +578,14 @@ public class DocumentManagerImpl implements DocumentManager {
 		transaction.setComment(exception.getMessage());
 		transaction.setDocument(document);
 		transaction.setPath(folderDAO.computePathExtended(document.getFolder().getId()));
-		DocumentHistoryDAO hDao = (DocumentHistoryDAO) Context.get().getBean(DocumentHistoryDAO.class);
+		DocumentHistoryDAO hDao = Context.get(DocumentHistoryDAO.class);
 		hDao.store(transaction);
 
-		if (exception instanceof ParseException) {
-			TenantDAO tDao = (TenantDAO) Context.get().getBean(TenantDAO.class);
+		if (exception instanceof ParsingException) {
+			TenantDAO tDao = Context.get(TenantDAO.class);
 			String tenant = tDao.getTenantName(document.getTenantId());
 			if (Context.get().getProperties().getBoolean(tenant + ".index.skiponerror", false)) {
-				DocumentDAO dDao = (DocumentDAO) Context.get().getBean(DocumentDAO.class);
+				DocumentDAO dDao = Context.get(DocumentDAO.class);
 				dDao.initialize(document);
 				document.setIndexed(AbstractDocument.INDEX_SKIP);
 				dDao.store(document);
@@ -580,17 +600,17 @@ public class DocumentManagerImpl implements DocumentManager {
 		return doc;
 	}
 
-	private void addHit(Document doc, String cont) throws ParseException {
+	private void addHit(Document doc, String cont) throws ParsingException {
 		try {
 			indexer.addHit(doc, cont);
 		} catch (Exception e) {
-			throw new ParseException(e.getMessage(), e);
+			throw new ParsingException(e.getMessage(), e);
 		}
 	}
 
 	private void markAliasesToIndex(long referencedDocId) throws PersistenceException {
-		documentDAO.jdbcUpdate("update ld_document set ld_indexed=" + AbstractDocument.INDEX_TO_INDEX
-				+ " where ld_docref=" + referencedDocId + " and not ld_id = " + referencedDocId);
+		documentDAO.jdbcUpdate(UPDATE_LD_DOCUMENT_SET_LD_INDEXED + AbstractDocument.INDEX_TO_INDEX + " where ld_docref="
+				+ referencedDocId + " and not ld_id = " + referencedDocId);
 	}
 
 	@Override
@@ -610,8 +630,8 @@ public class DocumentManagerImpl implements DocumentManager {
 			synchronizedUpdate(document, docVO, transaction);
 		} catch (Exception e) {
 			log.error(e.getMessage(), e);
-			if (e instanceof PersistenceException)
-				throw (PersistenceException) e;
+			if (e instanceof PersistenceException pe)
+				throw pe;
 			else
 				throw new PersistenceException(e);
 		}
@@ -708,10 +728,8 @@ public class DocumentManagerImpl implements DocumentManager {
 			document.setTemplateId(template.getId());
 			if (docVO.getAttributes() != null) {
 				document.getAttributes().clear();
-				for (String attrName : docVO.getAttributes().keySet()) {
-					Attribute docExtendedAttribute = docVO.getAttributes().get(attrName);
-					document.getAttributes().put(attrName, docExtendedAttribute);
-				}
+				for (Map.Entry<String, Attribute> entry : docVO.getAttributes().entrySet())
+					document.getAttributes().put(entry.getKey(), entry.getValue());
 			}
 		} else {
 			document.setTemplate(null);
@@ -777,7 +795,7 @@ public class DocumentManagerImpl implements DocumentManager {
 					indexer.deleteHit(doc.getId());
 
 					// The same thing should be done on each shortcut
-					documentDAO.jdbcUpdate("update ld_document set ld_indexed=" + AbstractDocument.INDEX_TO_INDEX
+					documentDAO.jdbcUpdate(UPDATE_LD_DOCUMENT_SET_LD_INDEXED + AbstractDocument.INDEX_TO_INDEX
 							+ " where ld_docref=" + doc.getId());
 				}
 
@@ -819,7 +837,7 @@ public class DocumentManagerImpl implements DocumentManager {
 		} catch (Exception ioe) {
 			throw new PersistenceException(ioe.getMessage(), ioe);
 		} finally {
-			FileUtils.deleteQuietly(tmp);
+			FileUtil.delete(tmp);
 		}
 	}
 
@@ -856,10 +874,9 @@ public class DocumentManagerImpl implements DocumentManager {
 			try {
 				storeFile(docVO, file);
 			} catch (Exception e) {
-				String message = String.format("Unable to store the file of document %d", docVO.getId());
-				log.error(message);
 				documentDAO.delete(docVO.getId());
-				throw new PersistenceException(message, e);
+				throw new PersistenceException(String.format("Unable to store the file of document %d", docVO.getId()),
+						e);
 			}
 
 			// The document record has been written, now store the initial
@@ -978,7 +995,7 @@ public class DocumentManagerImpl implements DocumentManager {
 	public int countPages(Document doc) {
 		try {
 			Parser parser = ParserFactory.getParser(doc.getFileName());
-			Storer strt = (Storer) Context.get().getBean(Storer.class);
+			Store strt = Context.get(Store.class);
 			return parser.countPages(strt.getStream(doc.getId(), strt.getResourceName(doc, null, null)),
 					doc.getFileName());
 		} catch (Exception e) {
@@ -987,8 +1004,8 @@ public class DocumentManagerImpl implements DocumentManager {
 		}
 	}
 
-	public Document copyToFolder(Document doc, Folder folder, DocumentHistory transaction)
-			throws PersistenceException, IOException {
+	public Document copyToFolder(Document doc, Folder folder, DocumentHistory transaction, boolean links, boolean notes,
+			boolean security) throws PersistenceException, IOException {
 		validateTransaction(transaction);
 
 		// initialize the document
@@ -998,9 +1015,8 @@ public class DocumentManagerImpl implements DocumentManager {
 			return createAlias(doc, folder, doc.getDocRefType(), transaction);
 		}
 
-		String resource = storer.getResourceName(doc, null, null);
-		InputStream is = storer.getStream(doc.getId(), resource);
-		try {
+		String resource = store.getResourceName(doc, null, null);
+		try (InputStream is = store.getStream(doc.getId(), resource);) {
 			Document cloned = new Document(doc);
 			cloned.setId(0);
 			if (doc.getFolder().getId() != folder.getId())
@@ -1014,6 +1030,10 @@ public class DocumentManagerImpl implements DocumentManager {
 			cloned.setLinks(0);
 			cloned.setOcrd(0);
 			cloned.setBarcoded(0);
+
+			if (!security)
+				cloned.getAccessControlList().clear();
+
 			Document createdDocument = create(is, cloned, transaction);
 
 			// Save the event of the copy
@@ -1026,11 +1046,49 @@ public class DocumentManagerImpl implements DocumentManager {
 			copyEvent.setComment(newPath + "/" + createdDocument.getFileName());
 			documentDAO.saveDocumentHistory(doc, copyEvent);
 
+			if (links)
+				copyLinks(doc, createdDocument);
+
+			if (notes)
+				copyNotes(doc, createdDocument);
+
 			return createdDocument;
-		} finally {
-			if (is != null)
-				is.close();
-			is = null;
+		}
+	}
+
+	private void copyNotes(Document sourceDocument, Document createdDocument) throws PersistenceException {
+		List<DocumentNote> docNotes = documentNoteDAO.findByDocId(sourceDocument.getId(),
+				sourceDocument.getFileVersion());
+		docNotes.sort((o1, o2) -> o1.getDate().compareTo(o2.getDate()));
+		for (DocumentNote docNote : docNotes) {
+			DocumentNote newNote = new DocumentNote(docNote);
+			newNote.setDocId(createdDocument.getId());
+			newNote.setFileVersion(null);
+
+			try {
+				documentNoteDAO.store(newNote);
+			} catch (PersistenceException e) {
+				log.warn("Error copying note {}", docNote);
+			}
+		}
+	}
+
+	private void copyLinks(Document sourceDocument, Document createdDocument) throws PersistenceException {
+		List<DocumentLink> docLinks = documentLinkDAO.findByDocId(sourceDocument.getId());
+
+		for (DocumentLink docLink : docLinks) {
+			DocumentLink newLink = new DocumentLink();
+			newLink.setTenantId(docLink.getTenantId());
+			newLink.setType(docLink.getType());
+			if (docLink.getDocument1().getId() == sourceDocument.getId()) {
+				newLink.setDocument1(createdDocument);
+				newLink.setDocument2(docLink.getDocument2());
+			} else {
+				newLink.setDocument2(createdDocument);
+				newLink.setDocument1(docLink.getDocument1());
+			}
+
+			documentLinkDAO.store(newLink);
 		}
 	}
 
@@ -1140,7 +1198,7 @@ public class DocumentManagerImpl implements DocumentManager {
 		Folder folder = alias.getFolder();
 		folderDAO.initialize(folder);
 
-		if (!folderDAO.isWriteEnabled(alias.getFolder().getId(), transaction.getUserId()))
+		if (!folderDAO.isWriteAllowed(alias.getFolder().getId(), transaction.getUserId()))
 			throw new PersistenceException(String.format("User %s without WRITE permission in folder %s",
 					transaction.getUsername(), folder.getId()));
 
@@ -1149,7 +1207,7 @@ public class DocumentManagerImpl implements DocumentManager {
 		documentDAO.delete(aliasId, transaction);
 
 		try {
-			return copyToFolder(originalDoc, folder, new DocumentHistory(transaction));
+			return copyToFolder(originalDoc, folder, new DocumentHistory(transaction), true, true, true);
 		} catch (IOException e) {
 			throw new PersistenceException(e);
 		}
@@ -1236,25 +1294,13 @@ public class DocumentManagerImpl implements DocumentManager {
 		}
 	}
 
-	public void setUserDAO(UserDAO userDAO) {
-		this.userDAO = userDAO;
-	}
-
-	public void setFolderDAO(FolderDAO folderDAO) {
-		this.folderDAO = folderDAO;
-	}
-
 	@Override
 	public Version deleteVersion(long versionId, DocumentHistory transaction) throws PersistenceException {
-		Version versionToDelete = versionDAO.findById(versionId);
-		if (versionToDelete == null)
-			throw new IllegalArgumentException("Unexisting version " + versionId);
+		Version versionToDelete = enforceExistingVersion(versionId);
 
 		String versionToDeleteSpec = versionToDelete.getVersion();
 
-		Document document = documentDAO.findById(versionToDelete.getDocId());
-		if (document == null)
-			throw new IllegalArgumentException("Unexisting referenced document " + versionToDelete.getDocId());
+		Document document = enforceExistingDocument(versionToDelete.getDocId());
 
 		List<Version> versions = versionDAO.findByDocId(versionToDelete.getDocId());
 
@@ -1273,13 +1319,16 @@ public class DocumentManagerImpl implements DocumentManager {
 
 		// If no more referenced, can delete the document's resources
 		if (!referenced) {
-			List<String> resources = storer.listResources(versionToDelete.getDocId(), versionToDelete.getFileVersion());
+			List<String> resources = store.listResources(versionToDelete.getDocId(), versionToDelete.getFileVersion());
 			for (String resource : resources)
 				try {
-					storer.delete(versionToDelete.getDocId(), resource);
+					store.delete(versionToDelete.getDocId(), resource);
 				} catch (Exception t) {
 					log.warn("Unable to delete resource {} of document {}", resource, versionToDelete.getDocId());
 				}
+		} else {
+			log.warn("Cannot delete version {} of document {} because file version {} is still referenced",
+					versionToDelete.getVersion(), versionToDelete.getFileVersion(), versionToDelete.getDocId());
 		}
 
 		try {
@@ -1308,6 +1357,20 @@ public class DocumentManagerImpl implements DocumentManager {
 		downgradeDocumentVersion(document, versionToDeleteSpec, transaction, lastVersion);
 
 		return lastVersion;
+	}
+
+	protected Document enforceExistingDocument(long docId) throws PersistenceException {
+		Document document = documentDAO.findById(docId);
+		if (document == null)
+			throw new IllegalArgumentException("Unexisting referenced document " + docId);
+		return document;
+	}
+
+	protected Version enforceExistingVersion(long versionId) throws PersistenceException {
+		Version versionToDelete = versionDAO.findById(versionId);
+		if (versionToDelete == null)
+			throw new IllegalArgumentException("Unexisting version " + versionId);
+		return versionToDelete;
 	}
 
 	private Version getLastVersion(List<Version> versions, Version versionToDelete) {
@@ -1339,41 +1402,34 @@ public class DocumentManagerImpl implements DocumentManager {
 		}
 	}
 
-	public void setDocumentNoteDAO(DocumentNoteDAO documentNoteDAO) {
-		this.documentNoteDAO = documentNoteDAO;
-	}
-
 	@Override
 	public long archiveFolder(long folderId, DocumentHistory transaction) throws PersistenceException {
-		List<Long> docIds = new ArrayList<>();
 		Folder root = folderDAO.findFolder(folderId);
+
+		Set<Long> archivedDocIds = new HashSet<>();
 
 		Collection<Long> folderIds = folderDAO.findFolderIdByUserIdAndPermission(transaction.getUserId(),
 				Permission.ARCHIVE, root.getId(), true);
 		for (Long fid : folderIds) {
 			String where = " where ld_deleted=0 and not ld_status=" + AbstractDocument.DOC_ARCHIVED
 					+ " and ld_folderid=" + fid;
-			@SuppressWarnings("unchecked")
-			List<Long> ids = documentDAO.queryForList("select ld_id from ld_document " + where, Long.class);
-			if (ids.isEmpty())
+			archivedDocIds.addAll(documentDAO.queryForList("select ld_id from ld_document " + where, Long.class)
+					.stream().collect(Collectors.toSet()));
+			if (archivedDocIds.isEmpty())
 				continue;
-			docIds.addAll(ids);
-			long[] idsArray = new long[ids.size()];
-			for (int i = 0; i < idsArray.length; i++)
-				idsArray[i] = ids.get(i).longValue();
-			archiveDocuments(idsArray, transaction);
+			archiveDocuments(archivedDocIds, transaction);
 		}
 
-		return docIds.size();
+		return archivedDocIds.size();
 	}
 
 	@Override
-	public void archiveDocuments(long[] docIds, DocumentHistory transaction) throws PersistenceException {
+	public void archiveDocuments(Set<Long> docIds, DocumentHistory transaction) throws PersistenceException {
 		if (transaction.getUser() == null)
 			throw new IllegalArgumentException("transaction user cannot be null");
 
 		List<Long> idsList = new ArrayList<>();
-		DocumentDAO dao = (DocumentDAO) Context.get().getBean(DocumentDAO.class);
+		DocumentDAO dao = Context.get(DocumentDAO.class);
 		Collection<Long> folderIds = folderDAO.findFolderIdByUserIdAndPermission(transaction.getUserId(),
 				Permission.ARCHIVE, null, true);
 
@@ -1393,15 +1449,14 @@ public class DocumentManagerImpl implements DocumentManager {
 		}
 
 		// Remove all corresponding hits from the index
-		SearchEngine engine = (SearchEngine) Context.get().getBean(SearchEngine.class);
+		SearchEngine engine = Context.get(SearchEngine.class);
 		engine.deleteHits(idsList);
 
 		log.info("Archived documents {}", idsList);
 	}
 
 	@Override
-	public Ticket createTicket(
-			Ticket ticket, DocumentHistory transaction)
+	public Ticket createTicket(Ticket ticket, DocumentHistory transaction)
 			throws PersistenceException, PermissionException {
 		validateTransaction(transaction);
 
@@ -1409,7 +1464,7 @@ public class DocumentManagerImpl implements DocumentManager {
 		if (document == null)
 			throw new PersistenceException("Unexisting document " + ticket.getDocId());
 
-		if (!folderDAO.isDownloadEnabled(document.getFolder().getId(), transaction.getUserId()))
+		if (!folderDAO.isDownloadllowed(document.getFolder().getId(), transaction.getUserId()))
 			throw new PermissionException(transaction.getUsername(), "Folder " + document.getFolder().getId(),
 					Permission.DOWNLOAD);
 
@@ -1453,10 +1508,6 @@ public class DocumentManagerImpl implements DocumentManager {
 			return urlPrefix + "view/" + ticket.getTicketId();
 		else
 			return urlPrefix + "download-ticket?ticketId=" + ticket.getTicketId();
-	}
-
-	public void setTicketDAO(TicketDAO ticketDAO) {
-		this.ticketDAO = ticketDAO;
 	}
 
 	@Override
@@ -1517,7 +1568,7 @@ public class DocumentManagerImpl implements DocumentManager {
 					docVO.setTagsFromWords(tags);
 				}
 
-				storer.writeToFile(document.getId(), storer.getResourceName(document, ver.getFileVersion(), null), tmp);
+				store.writeToFile(document.getId(), store.getResourceName(document, ver.getFileVersion(), null), tmp);
 				DocumentHistory checkinTransaction = new DocumentHistory(transaction);
 				checkinTransaction.setDate(new Date());
 				checkin(document.getId(), tmp, ver.getFileName(), false, docVO, checkinTransaction);
@@ -1530,7 +1581,7 @@ public class DocumentManagerImpl implements DocumentManager {
 	}
 
 	@Override
-	public int enforceFilesIntoFolderStorage(long rootFolderId, DocumentHistory transaction)
+	public int enforceFilesIntoFolderStore(long rootFolderId, DocumentHistory transaction)
 			throws PersistenceException, IOException {
 		Folder rootFolder = folderDAO.findFolder(rootFolderId);
 		if (rootFolder == null)
@@ -1550,23 +1601,23 @@ public class DocumentManagerImpl implements DocumentManager {
 
 			folderDAO.initialize(folder);
 
-			// Retrieve the storage specification from the current folder
-			int targetStorage = getStorage(folder);
+			// Retrieve the store specification from the current folder
+			int targetStore = getStore(folder);
 
-			log.info("Move the files of all the documents inside the folder {} into the target storage {}", rootFolder,
-					targetStorage);
+			log.info("Move the files of all the documents inside the folder {} into the target store {}", rootFolder,
+					targetStore);
 
 			List<Document> documents = documentDAO.findByFolder(folderId, null);
-			
+
 			for (Document document : documents) {
-				int movedFiles = storer.moveResourcesToStore(document.getId(), targetStorage);
-			
+				int movedFiles = store.moveResourcesToStore(document.getId(), targetStore);
+
 				if (movedFiles > 0) {
 					totalMovedFiles += movedFiles;
 					try {
 						DocumentHistory storedTransaction = new DocumentHistory(transaction);
 						storedTransaction
-								.setComment(String.format("%d files moved to storage %d", movedFiles, targetStorage));
+								.setComment(String.format("%d files moved to store %d", movedFiles, targetStore));
 						documentDAO.saveDocumentHistory(document, transaction);
 					} catch (Exception t) {
 						log.warn("Cannot gridRecord history for document {}", document, t);
@@ -1578,20 +1629,20 @@ public class DocumentManagerImpl implements DocumentManager {
 		return totalMovedFiles;
 	}
 
-	private int getStorage(Folder folder) {
-		int targetStorage = config.getInt("store.write", 1);
-		if (folder.getStorage() != null)
-			targetStorage = folder.getStorage().intValue();
+	private int getStore(Folder folder) {
+		int targetStore = config.getInt("store.write", 1);
+		if (folder.getStore() != null)
+			targetStore = folder.getStore().intValue();
 		else {
 			try {
-				// Check if one of the parent folders references the storer
+				// Check if one of the parent folders references the store
 				List<Folder> parents = folderDAO.findParents(folder.getId());
 				Collections.reverse(parents);
 
 				for (Folder parentFolder : parents) {
 					folderDAO.initialize(parentFolder);
-					if (parentFolder.getStorage() != null) {
-						targetStorage = parentFolder.getStorage().intValue();
+					if (parentFolder.getStore() != null) {
+						targetStore = parentFolder.getStore().intValue();
 						break;
 					}
 				}
@@ -1599,13 +1650,13 @@ public class DocumentManagerImpl implements DocumentManager {
 				log.error(e.getMessage(), e);
 			}
 		}
-		return targetStorage;
+		return targetStore;
 	}
 
 	@Override
 	public Document merge(Collection<Document> documents, long targetFolderId, String fileName,
 			DocumentHistory transaction) throws IOException, PersistenceException {
-		List<Long> docIds = documents.stream().map(d -> d.getId()).collect(Collectors.toList());
+		List<Long> docIds = documents.stream().map(d -> d.getId()).toList();
 		File tempDir = null;
 		File bigPdf = null;
 		try {
@@ -1617,10 +1668,10 @@ public class DocumentManagerImpl implements DocumentManager {
 			Arrays.sort(pdfs, (o1, o2) -> o1.getName().compareTo(o2.getName()));
 
 			// Merge all the PDFs
-			bigPdf = mergePdf(pdfs);
+			bigPdf = MergeUtil.mergePdf(List.of(pdfs));
 
 			// Add an history entry to track the export of the document
-			DocumentDAO docDao = (DocumentDAO) Context.get().getBean(DocumentDAO.class);
+			DocumentDAO docDao = Context.get(DocumentDAO.class);
 			if (transaction != null)
 				for (Long id : docIds) {
 					DocumentHistory trans = new DocumentHistory(transaction);
@@ -1630,14 +1681,14 @@ public class DocumentManagerImpl implements DocumentManager {
 
 			Document docVO = new Document();
 			docVO.setFileName(fileName.toLowerCase().endsWith(".pdf") ? fileName : fileName + ".pdf");
-			FolderDAO folderDao = (FolderDAO) Context.get().getBean(FolderDAO.class);
+			FolderDAO folderDao = Context.get(FolderDAO.class);
 			docVO.setFolder(folderDao.findById(targetFolderId));
 
-			DocumentManager manager = (DocumentManager) Context.get().getBean(DocumentManager.class);
+			DocumentManager manager = Context.get(DocumentManager.class);
 			return manager.create(bigPdf, docVO, transaction);
 		} finally {
-			FileUtil.strongDelete(bigPdf);
-			FileUtil.strongDelete(tempDir);
+			FileUtil.delete(bigPdf);
+			FileUtil.delete(tempDir);
 		}
 	}
 
@@ -1661,15 +1712,14 @@ public class DocumentManagerImpl implements DocumentManager {
 		for (long docId : docIds) {
 			try {
 				i++;
-				DocumentDAO docDao = (DocumentDAO) Context.get().getBean(DocumentDAO.class);
+				DocumentDAO docDao = Context.get(DocumentDAO.class);
 				Document document = docDao.findDocument(docId);
 
 				if (document != null && user != null && !user.isMemberOf(Group.GROUP_ADMIN)
 						&& !user.isMemberOf("publisher") && !document.isPublishing())
 					continue;
 
-				FormatConverterManager manager = (FormatConverterManager) Context.get()
-						.getBean(FormatConverterManager.class);
+				FormatConverterManager manager = Context.get(FormatConverterManager.class);
 				manager.convertToPdf(document, null);
 
 				File pdf = new File(tempDir, nf.format(i) + ".pdf");
@@ -1682,36 +1732,97 @@ public class DocumentManagerImpl implements DocumentManager {
 		return tempDir;
 	}
 
-	/**
-	 * Merges different PDFs into a single PDF-
-	 * 
-	 * @param pdfs ordered array of pdf files to be merged
-	 * @return The merged Pdf file
-	 * 
-	 * @throws IOException
-	 */
-	private File mergePdf(File[] pdfs) throws IOException {
-		File tempDir = null;
-		try {
-			Path tempPath = Files.createTempDirectory(MERGE);
-			tempDir = tempPath.toFile();
+	@Override
+	public void destroyDocument(long docId, FolderHistory transaction)
+			throws PersistenceException, PermissionException {
+		validateTransaction(transaction);
 
-			File dst = FileUtil.createTempFile(MERGE, ".pdf");
-
-			PDFMergerUtility merger = new PDFMergerUtility();
-			for (File file : pdfs) {
-				merger.addSource(file);
-			}
-
-			merger.setDestinationFileName(dst.getAbsolutePath());
-			MemoryUsageSetting memoryUsage = MemoryUsageSetting.setupTempFileOnly();
-			memoryUsage.setTempDir(tempDir);
-			merger.mergeDocuments(memoryUsage);
-
-			return dst;
-		} finally {
-			if (tempDir != null && tempDir.exists())
-				FileUtil.strongDelete(tempDir);
+		MenuDAO menuDAO = Context.get(MenuDAO.class);
+		if (!menuDAO.isReadEnable(Menu.DESTROY_DOCUMENTS, transaction.getUserId())) {
+			String message = "User " + transaction.getUsername() + " cannot access the menu " + Menu.DESTROY_DOCUMENTS;
+			throw new PermissionException(message);
 		}
+
+		transaction.setDocId(docId);
+		transaction.setEvent(FolderEvent.DOCUMENT_DESTROYED.toString());
+
+		log.debug("Destroying document {}", docId);
+
+		// Just retrieve required informations of the document to destroy
+		documentDAO.query("select ld_folderid, ld_filename, ld_version, ld_fileversion from ld_document",
+				new RowMapper<Document>() {
+
+					@Override
+					public Document mapRow(ResultSet rs, int arg1) throws SQLException {
+						transaction.setFolderId(rs.getLong(1));
+						transaction.setDocId(docId);
+						transaction.setFilename(rs.getString(2));
+						transaction.setVersion(rs.getString(3));
+						transaction.setFileVersion(rs.getString(4));
+
+						Folder folder = folderDAO.findById(transaction.getFolderId());
+						if (folder != null)
+							transaction.setFolder(folder);
+
+						return null;
+					}
+				}, 1);
+
+		List<Long> versionIds = documentDAO.queryForList("select ld_id from ld_version where ld_documentid=" + docId,
+				Long.class);
+		if (!versionIds.isEmpty()) {
+			documentDAO.jdbcUpdate("delete from ld_version_ext where ld_versionid in ("
+					+ versionIds.stream().map(id -> Long.toString(id)).collect(Collectors.joining(",")) + ")");
+		}
+
+		String documentTag = docId + " - " + transaction.getFilename();
+
+		int count = documentDAO.jdbcUpdate("delete from ld_version where ld_documentid = " + docId);
+		log.info("Destroyed {} versions of document {}", count, documentTag);
+
+		documentDAO.jdbcUpdate("delete from ld_document_ext where ld_docid = " + docId);
+
+		count = documentDAO.jdbcUpdate("delete from ld_document where ld_docref = " + docId);
+		log.info("Destroyed {} aliases of document {}", count, documentTag);
+
+		count = documentDAO.jdbcUpdate("delete from ld_tag where ld_docid = " + docId);
+		log.info("Destroyed {} tags of document {}", count, documentTag);
+
+		count = documentDAO.jdbcUpdate("delete from ld_link where ld_docid1 = " + docId + " or ld_docid2 = " + docId);
+		log.info("Destroyed {} links of document {}", count, documentTag);
+
+		count = documentDAO.jdbcUpdate("delete from ld_bookmark where ld_type=0 and ld_docid = " + docId);
+		log.info("Destroyed {} bookmarks of document {}", count, documentTag);
+
+		count = documentDAO.jdbcUpdate("delete from ld_ticket where ld_docid = " + docId);
+		log.info("Destroyed {} tickets of document {}", count, documentTag);
+
+		count = documentDAO.jdbcUpdate("delete from ld_note where ld_docid = " + docId);
+		log.info("Destroyed {} notes of document {}", count, documentTag);
+
+		count = documentDAO.jdbcUpdate("delete from ld_history where ld_docid = " + docId);
+		log.info("Destroyed {} histories of document {}", count, documentTag);
+
+		try {
+			count = documentDAO.jdbcUpdate("delete from ld_readingrequest where ld_docid = " + docId);
+			log.info("Destroyed {} reading requests of document {}", count, documentTag);
+		} catch (Exception e) {
+			// Ignore because the table may not exist
+		}
+
+		documentDAO.jdbcUpdate("delete from ld_document where ld_id = " + docId);
+		log.info("Destroyed the record of document {}", documentTag);
+
+		indexer.deleteHit(docId);
+		log.info("Destroyed the index entry of document {}", documentTag);
+
+		store.delete(docId);
+		log.info("Destroyed the store of document {}", documentTag);
+
+		log.info("Document {} has been completely destroyed", documentTag);
+
+		// Record this destroy event in the parent folder history
+		if (transaction.getFolder() != null)
+			folderDAO.saveFolderHistory(transaction.getFolder(), transaction);
 	}
 }
