@@ -2,10 +2,8 @@ package com.logicaldoc.core.folder;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.sql.Statement;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -20,6 +18,8 @@ import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.stream.Collectors;
 
+import javax.annotation.Resource;
+
 import org.apache.commons.lang.StringUtils;
 import org.slf4j.LoggerFactory;
 import org.springframework.jdbc.core.BeanPropertyRowMapper;
@@ -31,25 +31,26 @@ import com.logicaldoc.core.PersistentObject;
 import com.logicaldoc.core.RunLevel;
 import com.logicaldoc.core.document.AbstractDocument;
 import com.logicaldoc.core.document.Document;
+import com.logicaldoc.core.document.DocumentDAO;
 import com.logicaldoc.core.document.DocumentEvent;
 import com.logicaldoc.core.document.DocumentHistory;
 import com.logicaldoc.core.document.DocumentManager;
 import com.logicaldoc.core.document.Tag;
-import com.logicaldoc.core.document.dao.DocumentDAO;
 import com.logicaldoc.core.metadata.Attribute;
 import com.logicaldoc.core.metadata.Template;
 import com.logicaldoc.core.metadata.TemplateDAO;
-import com.logicaldoc.core.security.Group;
+import com.logicaldoc.core.security.AccessControlEntry;
+import com.logicaldoc.core.security.AccessControlUtil;
 import com.logicaldoc.core.security.Permission;
 import com.logicaldoc.core.security.Session;
 import com.logicaldoc.core.security.SessionManager;
 import com.logicaldoc.core.security.Tenant;
-import com.logicaldoc.core.security.User;
-import com.logicaldoc.core.security.UserGroup;
-import com.logicaldoc.core.security.dao.GroupDAO;
-import com.logicaldoc.core.security.dao.TenantDAO;
-import com.logicaldoc.core.security.dao.UserDAO;
-import com.logicaldoc.core.store.Storer;
+import com.logicaldoc.core.security.TenantDAO;
+import com.logicaldoc.core.security.user.Group;
+import com.logicaldoc.core.security.user.User;
+import com.logicaldoc.core.security.user.UserDAO;
+import com.logicaldoc.core.security.user.UserGroup;
+import com.logicaldoc.core.store.Store;
 import com.logicaldoc.util.Context;
 import com.logicaldoc.util.StringUtil;
 import com.logicaldoc.util.html.HTMLSanitizer;
@@ -63,11 +64,13 @@ import com.logicaldoc.util.sql.SqlUtil;
  */
 public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> implements FolderDAO {
 
+	private static final String ROOT_ID = "rootId";
+
 	private static final String TENANT_ID_EQUAL = ".tenantId=";
 
 	private static final String PARENTID_EQUAL = ".parentId=";
 
-	private static final String FOLDER_GROUPS_AS_GROUP = ".folderGroups as _group ";
+	private static final String FOLDER_ACL_AS_GROUP = ".accessControlList as _group ";
 
 	private static final String SECURITY_REF_IN = ".securityRef in (";
 
@@ -93,25 +96,21 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 	private static final String WHERE_GROUP_GROUPID_IN = " where _group.groupId in (";
 
+	@Resource(name = "UserDAO")
 	private UserDAO userDAO;
 
+	@Resource(name = "FolderHistoryDAO")
 	private FolderHistoryDAO historyDAO;
 
-	private Storer storer;
+	@Resource(name = "Store")
+	private Store store;
 
+	@Resource(name = "folderListenerManager")
 	private FolderListenerManager listenerManager;
 
 	protected HibernateFolderDAO() {
 		super(Folder.class);
 		super.log = LoggerFactory.getLogger(HibernateFolderDAO.class);
-	}
-
-	public UserDAO getUserDAO() {
-		return userDAO;
-	}
-
-	public void setUserDAO(UserDAO userDAO) {
-		this.userDAO = userDAO;
 	}
 
 	@Override
@@ -124,8 +123,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		if (!checkStoringAspect())
 			return;
 
-		if (folder.getId() != 0L && getCurrentSession().contains(folder))
-			getCurrentSession().merge(folder);
+		workspaceChecks(folder);
 
 		if (!folder.getName().equals(SLASH)) {
 			// To avoid java script and xml injection
@@ -145,7 +143,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 			if (folder.getFoldRef() == null) {
 				if (folder.getSecurityRef() != null)
-					folder.getFolderGroups().clear();
+					folder.getAccessControlList().clear();
 
 				setCreator(folder, transaction);
 
@@ -154,10 +152,15 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 			setTags(folder);
 
-			removeForbiddenPermissionsForGuests(folder);
+			// Remove the sections
+			folder.getAttributes().values().removeIf(Attribute::isSection);
 
-			if (folder.getTemplate() == null)
+			AccessControlUtil.removeForbiddenPermissionsForGuests(folder);
+
+			if (folder.getTemplate() == null) {
 				folder.setOcrTemplateId(null);
+				folder.setBarcodeTemplateId(null);
+			}
 
 			log.debug("Invoke listeners before store");
 			Map<String, Object> dictionary = new HashMap<>();
@@ -182,6 +185,23 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			saveFolderHistory(new Folder(folder), transaction);
 		} catch (PersistenceException e) {
 			handleStoreError(transaction, e);
+		}
+	}
+
+	private void workspaceChecks(Folder folder) throws PersistenceException {
+		if (folder.getId() != 0L && folder.getType() == Folder.TYPE_WORKSPACE) {
+			Folder root = findRoot(folder.getTenantId());
+			if (root == null)
+				return;
+
+			if (folder.getParentId() != root.getId())
+				throw new PersistenceException("You cannot move a workspace");
+
+			long defaultWorkspaceId = queryForLong(
+					"select ld_id from ld_folder where ld_parentid = :rootId and ld_name = :name",
+					Map.of(ROOT_ID, root.getId(), "name", Folder.DEFAULTWORKSPACENAME));
+			if (folder.getId() == defaultWorkspaceId && !folder.getName().equals(Folder.DEFAULTWORKSPACENAME))
+				throw new PersistenceException("You cannot rename the default workspace");
 		}
 	}
 
@@ -222,37 +242,10 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 				session.logError(e.getMessage());
 		}
 		log.error(e.getMessage(), e);
-		if (e instanceof PersistenceException)
-			throw (PersistenceException) e;
+		if (e instanceof PersistenceException pe)
+			throw pe;
 		else
 			throw new PersistenceException(e);
-	}
-
-	private void removeForbiddenPermissionsForGuests(Folder folder) throws PersistenceException {
-		// Remove the forbidden permissions for the guests
-		GroupDAO gDao = (GroupDAO) Context.get().getBean(GroupDAO.class);
-		Iterator<FolderGroup> iter = folder.getFolderGroups().iterator();
-		while (iter.hasNext()) {
-			FolderGroup fg = iter.next();
-			Group group = gDao.findById(fg.getGroupId());
-			if (group != null && group.isGuest()) {
-				fg.setAdd(0);
-				fg.setArchive(0);
-				fg.setAutomation(0);
-				fg.setCalendar(0);
-				fg.setDelete(0);
-				fg.setExport(0);
-				fg.setImmutable(0);
-				fg.setImport(0);
-				fg.setMove(0);
-				fg.setPassword(0);
-				fg.setRename(0);
-				fg.setSecurity(0);
-				fg.setSign(0);
-				fg.setWorkflow(0);
-				fg.setWrite(0);
-			}
-		}
 	}
 
 	private void setTags(Folder folder) {
@@ -277,7 +270,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		}
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public List<Folder> findByUserId(long userId) throws PersistenceException {
 		List<Folder> folders = new ArrayList<>();
@@ -293,11 +285,11 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			// First of all collect all folders that define it's own
 			// policies
 			StringBuilder query = new StringBuilder("select distinct(_folder) from Folder _folder  ");
-			query.append(" left join _folder.folderGroups as _group ");
+			query.append(" left join _folder" + FOLDER_ACL_AS_GROUP);
 			query.append(WHERE_GROUP_GROUPID_IN);
 			query.append(userGroups.stream().map(ug -> Long.toString(ug.getId())).collect(Collectors.joining(",")));
 			query.append(")");
-			folders = findByQuery(query.toString(), new HashMap<>(), null);
+			folders = findByObjectQuery(query.toString(), new HashMap<>(), null);
 
 			if (folders.isEmpty()) {
 				return folders;
@@ -326,7 +318,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return user;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public List<Folder> findByUserId(long userId, long parentId) throws PersistenceException {
 		List<Folder> coll = new ArrayList<>();
@@ -345,14 +336,12 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			return coll;
 
 		query1.append(SELECT_DISTINCT + ENTITY + ") " + FROM_FOLDER + ENTITY + " ");
-		query1.append(LEFT_JOIN + ENTITY + ".folderGroups as _group");
+		query1.append(LEFT_JOIN + ENTITY + FOLDER_ACL_AS_GROUP);
 		query1.append(WHERE_GROUP_GROUPID_IN);
 		query1.append(precoll.stream().map(ug -> Long.toString(ug.getId())).collect(Collectors.joining(",")));
 		query1.append(") " + AND + ENTITY + ".parentId = :parentId and " + ENTITY + ".id != " + ENTITY + ".parentId");
 
-		Map<String, Object> params = new HashMap<>();
-		params.put(PARENT_ID, parentId);
-		coll = findByQuery(query1.toString(), params, null);
+		coll = findByObjectQuery(query1.toString(), Map.of(PARENT_ID, parentId), null);
 
 		/*
 		 * Now search for all other folders that references accessible folders
@@ -361,13 +350,12 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 				+ ".deleted=0 and " + ENTITY + ".parentId = :parentId ");
 		query2.append(AND + ENTITY + SECURITY_REF_IN);
 		query2.append("    select distinct(B.id) from Folder B ");
-		query2.append(" left join B.folderGroups as _group");
+		query2.append(" left join B.accessControlList as _group");
 		query2.append(WHERE_GROUP_GROUPID_IN);
 		query2.append(precoll.stream().map(ug -> Long.toString(ug.getId())).collect(Collectors.joining(",")));
 		query2.append("))");
 
-		params.put(PARENT_ID, parentId);
-		List<Folder> coll2 = findByQuery(query2.toString(), params, null);
+		List<Folder> coll2 = findByObjectQuery(query2.toString(), Map.of(PARENT_ID, parentId), null);
 		for (Folder folder : coll2) {
 			if (!coll.contains(folder))
 				coll.add(folder);
@@ -386,7 +374,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 				"order by " + ENTITY + ".name", max);
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public List<Folder> findChildren(long parentId, long userId) throws PersistenceException {
 		List<Folder> coll = new ArrayList<>();
@@ -405,13 +392,13 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		 * Search for the folders that define its own policies
 		 */
 		StringBuilder query1 = new StringBuilder(SELECT_DISTINCT + ENTITY + ") " + FROM_FOLDER + ENTITY + "  ");
-		query1.append(LEFT_JOIN + ENTITY + FOLDER_GROUPS_AS_GROUP);
+		query1.append(LEFT_JOIN + ENTITY + FOLDER_ACL_AS_GROUP);
 		query1.append(WHERE_GROUP_GROUPID_IN);
 		query1.append(groups.stream().map(ug -> Long.toString(ug.getId())).collect(Collectors.joining(",")));
 		query1.append(") " + AND + ENTITY + PARENTID_EQUAL + parent.getId());
 		query1.append(" and not(" + ENTITY + ".id=" + parent.getId() + ")");
 
-		coll = findByQuery(query1.toString(), (Map<String, Object>) null, null);
+		coll = findByObjectQuery(query1.toString(), (Map<String, Object>) null, null);
 
 		/*
 		 * Now search for all other folders that references accessible folders
@@ -420,7 +407,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 				+ ".deleted=0 and " + ENTITY + ".parentId = :parentId ");
 		query2.append(AND + ENTITY + SECURITY_REF_IN);
 		query2.append("    select distinct(B.id) from Folder B ");
-		query2.append(" left join B.folderGroups as _group");
+		query2.append(" left join B.accessControlList as _group");
 		query2.append(WHERE_GROUP_GROUPID_IN);
 		query2.append(groups.stream().map(ug -> Long.toString(ug.getId())).collect(Collectors.joining(",")));
 		query2.append("))");
@@ -428,7 +415,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 		Map<String, Object> params = new HashMap<>();
 		params.put(PARENT_ID, parent.getId());
-		List<Folder> coll2 = findByQuery(query2.toString(), params, null);
+		List<Folder> coll2 = findByQuery(query2.toString(), params, Folder.class, null);
 		for (Folder folder : coll2) {
 			if (!coll.contains(folder))
 				coll.add(folder);
@@ -466,31 +453,36 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		if (coll == null || coll.isEmpty())
 			return new ArrayList<>();
 		else
-			return coll.stream().map(Folder::getId).collect(Collectors.toList());
+			return coll.stream().map(Folder::getId).toList();
 	}
 
 	@Override
-	public boolean isPrintEnabled(long folderId, long userId) throws PersistenceException {
-		return isPermissionEnabled(Permission.PRINT, folderId, userId);
+	public boolean isPrintAllowed(long folderId, long userId) throws PersistenceException {
+		return isPermissionAllowed(Permission.PRINT, folderId, userId);
 	}
 
 	@Override
-	public boolean isWriteEnabled(long folderId, long userId) throws PersistenceException {
-		return isPermissionEnabled(Permission.WRITE, folderId, userId);
+	public boolean isWriteAllowed(long folderId, long userId) throws PersistenceException {
+		return isPermissionAllowed(Permission.WRITE, folderId, userId);
 	}
 
 	@Override
-	public boolean isDownloadEnabled(long id, long userId) throws PersistenceException {
-		return isPermissionEnabled(Permission.DOWNLOAD, id, userId);
+	public boolean isDownloadllowed(long id, long userId) throws PersistenceException {
+		return isPermissionAllowed(Permission.DOWNLOAD, id, userId);
 	}
 
 	@Override
-	public boolean isMoveEnabled(long id, long userId) throws PersistenceException {
-		return isPermissionEnabled(Permission.MOVE, id, userId);
+	public boolean isMoveAllowed(long id, long userId) throws PersistenceException {
+		return isPermissionAllowed(Permission.MOVE, id, userId);
 	}
 
 	@Override
-	public boolean isReadEnabled(long folderId, long userId) throws PersistenceException {
+	public boolean isPreviewAllowed(long id, long userId) throws PersistenceException {
+		return isPermissionAllowed(Permission.PREVIEW, id, userId);
+	}
+
+	@Override
+	public boolean isReadAllowed(long folderId, long userId) throws PersistenceException {
 		User user = getExistingtUser(userId);
 		if (user.isMemberOf(Group.GROUP_ADMIN))
 			return true;
@@ -507,7 +499,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			return false;
 
 		StringBuilder query = new StringBuilder(
-				"select distinct(ld_folderid) from ld_foldergroup where ld_groupid in (");
+				"select distinct(ld_folderid) from ld_folder_acl where ld_read=1 and ld_groupid in (");
 		query.append(userGroups.stream().map(g -> Long.toString(g.getId())).collect(Collectors.joining(",")));
 		query.append(") and ld_folderid=" + id);
 
@@ -521,7 +513,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 	@Override
 	public boolean hasWriteAccess(Folder folder, long userId) throws PersistenceException {
-		if (!isWriteEnabled(folder.getId(), userId))
+		if (!isWriteAllowed(folder.getId(), userId))
 			return false;
 
 		List<Folder> children = findByParentId(folder.getId());
@@ -534,7 +526,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return true;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public List<Folder> findByGroupId(long groupId) throws PersistenceException {
 		// The administrators can see all folders
@@ -545,10 +536,10 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		 * Search for folders that define its own security policies
 		 */
 		StringBuilder query = new StringBuilder(SELECT_DISTINCT + ENTITY + ") " + FROM_FOLDER + ENTITY + "  ");
-		query.append(LEFT_JOIN + ENTITY + FOLDER_GROUPS_AS_GROUP);
+		query.append(LEFT_JOIN + ENTITY + FOLDER_ACL_AS_GROUP);
 		query.append(WHERE + ENTITY + ".deleted=0 and _group.groupId =" + groupId);
 
-		List<Folder> coll = findByQuery(query.toString(), (Map<String, Object>) null, null);
+		List<Folder> coll = findByObjectQuery(query.toString(), (Map<String, Object>) null, null);
 
 		/*
 		 * Now search for all other folders that references the previous ones
@@ -565,7 +556,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 				first = false;
 			}
 			query2.append(")");
-			List<Folder> coll2 = findByQuery(query2.toString(), (Map<String, Object>) null, null);
+			List<Folder> coll2 = findByObjectQuery(query2.toString(), (Map<String, Object>) null, null);
 			for (Folder folder : coll2) {
 				if (!coll.contains(folder))
 					coll.add(folder);
@@ -575,7 +566,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return coll;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public List<Long> findIdByUserId(long userId, long parentId) throws PersistenceException {
 		List<Long> ids = new ArrayList<>();
@@ -588,10 +578,9 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		Set<Group> precoll = user.getGroups();
 		Iterator<Group> iter = precoll.iterator();
 		if (!precoll.isEmpty()) {
-			StringBuilder query1 = new StringBuilder(
-					"select distinct(A.ld_folderid) from ld_foldergroup A, ld_folder B "
-							+ " where B.ld_deleted=0 and A.ld_folderid=B.ld_id AND (B.ld_parentid=" + parentId
-							+ " OR B.ld_id=" + parentId + ")" + AND_LDGROUPID_IN);
+			StringBuilder query1 = new StringBuilder("select distinct(A.ld_folderid) from ld_folder_acl A, ld_folder B "
+					+ " where B.ld_deleted=0 and A.ld_folderid=B.ld_id AND A.ld_read=1 and (B.ld_parentid=" + parentId
+					+ " OR B.ld_id=" + parentId + ")" + AND_LDGROUPID_IN);
 			boolean first = true;
 			while (iter.hasNext()) {
 				if (!first)
@@ -647,7 +636,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		if (tenantId != null)
 			query.append(AND + "ld_tenantid = " + tenantId);
 
-		@SuppressWarnings("unchecked")
 		List<Long> ids = queryForList(query.toString(), Long.class);
 		List<Folder> folders = new ArrayList<>();
 		for (Long id : ids)
@@ -742,7 +730,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		transaction.setFolderId(folder.getId());
 		transaction.setTenantId(folder.getTenantId());
 
-		Tenant tenant = ((TenantDAO) Context.get().getBean(TenantDAO.class)).findById(folder.getTenantId());
+		Tenant tenant = (Context.get(TenantDAO.class)).findById(folder.getTenantId());
 		if (tenant != null)
 			transaction.setTenant(tenant.getName());
 
@@ -849,8 +837,8 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	}
 
 	@Override
-	public boolean isPermissionEnabled(Permission permission, long folderId, long userId) throws PersistenceException {
-		Set<Permission> permissions = getEnabledPermissions(folderId, userId);
+	public boolean isPermissionAllowed(Permission permission, long folderId, long userId) throws PersistenceException {
+		Set<Permission> permissions = getAllowedPermissions(folderId, userId);
 		return permissions.contains(permission);
 	}
 
@@ -859,18 +847,18 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		// The parent folder
 		Folder parent = findFolder(parentId);
 
-		int count = bulkUpdate("set ld_deleted=0, ld_parentid=" + parent.getId()
+		int count = jdbcUpdate("update ld_folder set ld_deleted=0, ld_parentid=" + parent.getId()
 				+ ", ld_lastmodified=CURRENT_TIMESTAMP where not ld_type=" + Folder.TYPE_WORKSPACE + " and ld_id="
-				+ folderId, (Map<String, Object>) null);
+				+ folderId);
 
 		if (count == 0) {
 			// The root of folders in the current tenant
 			Folder root = findRoot(parent.getTenantId());
 
 			// Workspaces must always be restored under the root
-			bulkUpdate("set ld_deleted=0, ld_parentid=" + root.getId()
+			jdbcUpdate("update ld_folder set ld_deleted=0, ld_parentid=" + root.getId()
 					+ ", ld_lastmodified=CURRENT_TIMESTAMP where ld_type=" + Folder.TYPE_WORKSPACE + " and ld_id="
-					+ folderId, (Map<String, Object>) null);
+					+ folderId);
 		}
 
 		Folder fld = findFolder(folderId);
@@ -883,8 +871,9 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		Set<Long> treeIds = findFolderIdInTree(folderId, true);
 		if (!treeIds.isEmpty()) {
 			String idsStr = treeIds.toString().replace('[', '(').replace(']', ')');
-			bulkUpdate("set ld_deleted=0, ld_lastmodified=CURRENT_TIMESTAMP where ld_deleted=1 and ld_id in " + idsStr,
-					(Map<String, Object>) null);
+			jdbcUpdate(
+					"update ld_folder set ld_deleted=0, ld_lastmodified=CURRENT_TIMESTAMP where ld_deleted=1 and ld_id in "
+							+ idsStr);
 			jdbcUpdate(
 					"update ld_document set ld_deleted=0, ld_lastmodified=CURRENT_TIMESTAMP where ld_deleted=1 and ld_folderid in "
 							+ idsStr);
@@ -892,14 +881,13 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	}
 
 	@Override
-	public Set<Permission> getEnabledPermissions(long folderId, long userId) throws PersistenceException {
-		Set<Permission> permissions = new HashSet<>();
+	public Set<Permission> getAllowedPermissions(long folderId, long userId) throws PersistenceException {
+		final Set<Permission> permissions = new HashSet<>();
 		User user = getExistingtUser(userId);
 
 		// If the user is an administrator bypass all controls
-		if (user.isMemberOf(Group.GROUP_ADMIN)) {
+		if (user.isMemberOf(Group.GROUP_ADMIN))
 			return Permission.all();
-		}
 
 		Set<Group> userGroups = user.getGroups();
 		if (userGroups.isEmpty())
@@ -914,13 +902,18 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			log.debug("Use the security reference {}", id);
 		}
 
-		StringBuilder query = new StringBuilder(
-				"select A.ld_write as LDWRITE, A.ld_add as LDADD, A.ld_security as LDSECURITY, A.ld_immutable as LDIMMUTABLE, A.ld_delete as LDDELETE, A.ld_rename as LDRENAME, A.ld_import as LDIMPORT, A.ld_export as LDEXPORT, A.ld_sign as LDSIGN, A.ld_archive as LDARCHIVE, A.ld_workflow as LDWORKFLOW, A.ld_download as LDDOWNLOAD, A.ld_calendar as LDCALENDAR, A.ld_subscription as LDSUBSCRIPTION, A.ld_print as LDPRINT, A.ld_password as LDPASSWORD, A.ld_move as LDMOVE, A.ld_email as LDEMAIL, A.ld_automation LDAUTOMATION, A.ld_storage LDSTORAGE, A.ld_readingreq LDREADINGREQ");
-		query.append(" from ld_foldergroup A");
+		StringBuilder query = new StringBuilder("""
+                 select ld_read as LDREAD, ld_write as LDWRITE, ld_add as LDADD, ld_security as LDSECURITY, ld_immutable as LDIMMUTABLE, 
+                 ld_delete as LDDELETE, ld_rename as LDRENAME, ld_import as LDIMPORT, ld_export as LDEXPORT, ld_sign as LDSIGN, 
+                 ld_archive as LDARCHIVE, ld_workflow as LDWORKFLOW, ld_download as LDDOWNLOAD, ld_calendar as LDCALENDAR, 
+                 ld_subscription as LDSUBSCRIPTION, ld_print as LDPRINT, ld_password as LDPASSWORD, ld_move as LDMOVE, ld_email as LDEMAIL, 
+                 ld_automation LDAUTOMATION, ld_store LDSTORE, ld_readingreq LDREADINGREQ, ld_preview LDPREVIEW, ld_customid LDCUSTOMID
+""");
+		query.append(" from ld_folder_acl ");
 		query.append(WHERE);
-		query.append(" A.ld_folderid=" + id);
-		query.append(AND_LDGROUPID_IN);
-		query.append(userGroups.stream().map(ug -> Long.toString(ug.getId())).collect(Collectors.joining(",")));
+		query.append(" ld_folderid=" + id);
+		query.append(" and ld_groupid in (select ld_groupid from ld_usergroup where ld_userid=");
+		query.append(Long.toString(userId));
 		query.append(")");
 
 		Map<String, Permission> permissionColumn = new HashMap<>();
@@ -932,6 +925,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		permissionColumn.put("LDSECURITY", Permission.SECURITY);
 		permissionColumn.put("LDRENAME", Permission.RENAME);
 		permissionColumn.put("LDWRITE", Permission.WRITE);
+		permissionColumn.put("LDREAD", Permission.READ);
 		permissionColumn.put("LDSIGN", Permission.SIGN);
 		permissionColumn.put("LDARCHIVE", Permission.ARCHIVE);
 		permissionColumn.put("LDWORKFLOW", Permission.WORKFLOW);
@@ -943,32 +937,25 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		permissionColumn.put("LDMOVE", Permission.MOVE);
 		permissionColumn.put("LDEMAIL", Permission.EMAIL);
 		permissionColumn.put("LDAUTOMATION", Permission.AUTOMATION);
-		permissionColumn.put("LDSTORAGE", Permission.STORAGE);
+		permissionColumn.put("LDSTORE", Permission.STORE);
 		permissionColumn.put("LDREADINGREQ", Permission.READINGREQ);
+		permissionColumn.put("LDPREVIEW", Permission.PREVIEW);
+		permissionColumn.put("LDCUSTOMID", Permission.CUSTOMID);
 
-		/**
-		 * IMPORTANT: the connection MUST be explicitly closed, otherwise it is
-		 * probable that the connection pool will leave open it indefinitely.
-		 */
-		try (Connection con = getConnection();
-				Statement stmt = con.createStatement();
-				ResultSet rs = stmt.executeQuery(query.toString())) {
-			while (rs.next()) {
-				permissions.add(Permission.READ);
+		queryForResultSet(query.toString(), null, null, rows -> {
+			while (rows.next()) {
 				for (Entry<String, Permission> entry : permissionColumn.entrySet()) {
 					String column = entry.getKey();
 					Permission permission = entry.getValue();
-					if (rs.getInt(column) == 1)
+					if (rows.getInt(column) == 1)
 						permissions.add(permission);
 				}
 			}
-		} catch (SQLException se) {
-			throw new PersistenceException(se.getMessage(), se);
-		}
+		});
+
 		return permissions;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public Collection<Long> findFolderIdByUserIdInPath(long userId, long parentId) throws PersistenceException {
 		/*
@@ -990,9 +977,10 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		 * restrict to the tree since a folder in the tree can reference another
 		 * folder outside.
 		 */
-		StringBuilder query1 = new StringBuilder("select distinct(A.ld_folderid) from ld_foldergroup A where 1=1 ");
+		StringBuilder query1 = new StringBuilder(
+				"select distinct(A.ld_folderid) from ld_folder_acl A where A.ld_read=1 ");
 
-		List<Long> groupIds = user.getUserGroups().stream().map(UserGroup::getGroupId).collect(Collectors.toList());
+		List<Long> groupIds = user.getUserGroups().stream().map(UserGroup::getGroupId).toList();
 		if (!groupIds.isEmpty()) {
 			query1.append(AND_LDGROUPID_IN);
 			query1.append(StringUtil.arrayToString(groupIds.toArray(new Long[0]), ","));
@@ -1055,7 +1043,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return ids;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public Collection<Long> findFolderIdByUserIdAndPermission(long userId, Permission permission, Long parentId,
 			boolean tree) throws PersistenceException {
@@ -1085,7 +1072,8 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		 * restrict to the tree since a folder in the tree can reference another
 		 * folder outside.
 		 */
-		StringBuilder query1 = new StringBuilder("select distinct(A.ld_folderid) from ld_foldergroup A where 1=1 ");
+		StringBuilder query1 = new StringBuilder(
+				"select distinct(A.ld_folderid) from ld_folder_acl A where A.ld_read=1 ");
 		if (permission != Permission.READ)
 			query1.append(" and A.ld_" + permission.getName() + "=1 ");
 
@@ -1136,21 +1124,12 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	}
 
 	private void appendUserGroupIdsCondition(User user, StringBuilder query) {
-		List<String> groupIds = user.getUserGroups().stream().map(g -> Long.toString(g.getGroupId()))
-				.collect(Collectors.toList());
+		List<String> groupIds = user.getUserGroups().stream().map(g -> Long.toString(g.getGroupId())).toList();
 		if (!groupIds.isEmpty()) {
 			query.append(AND_LDGROUPID_IN);
 			query.append(groupIds.stream().collect(Collectors.joining(",")));
 			query.append(") ");
 		}
-	}
-
-	public FolderHistoryDAO getHistoryDAO() {
-		return historyDAO;
-	}
-
-	public void setHistoryDAO(FolderHistoryDAO historyDAO) {
-		this.historyDAO = historyDAO;
 	}
 
 	@Override
@@ -1179,7 +1158,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		if (folderId == rootId)
 			throw new PersistenceException("You cannot delete folder " + folder.getName() + " - " + folderId);
 
-		if (folder.getName().equals("Default") && folder.getParentId() == rootId)
+		if (folder.getName().equals(Folder.DEFAULTWORKSPACENAME) && folder.getParentId() == rootId)
 			throw new PersistenceException("You cannot delete folder " + folder.getName() + " - " + folderId);
 	}
 
@@ -1220,6 +1199,12 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 				log.info("Removed {} aliases pointing to the deleted folder {}", count, folderId);
 			}
 		}
+
+		/**
+		 * Clear the security refs pointing to this deleted folder
+		 */
+		long updatedRows = jdbcUpdate("update ld_folder set ld_securityref=null where ld_securityref=" + folderId);
+		log.debug("Cleared {} secuerity refs pointing to the deleted folder {}", updatedRows, folderId);
 	}
 
 	private void validateTransactionAndUser(FolderHistory transaction) throws PersistenceException {
@@ -1249,7 +1234,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	}
 
 	@Override
-	public void applyRightToTree(long rootId, FolderHistory transaction) throws PersistenceException {
+	public void applySecurityToTree(long rootId, FolderHistory transaction) throws PersistenceException {
 		validateTransaction(transaction);
 		if (transaction.getSessionId() == null)
 			throw new PersistenceException("No session specified in transaction");
@@ -1271,28 +1256,23 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		/*
 		 * Apply the securityRef
 		 */
-		Map<String, Object> params = new HashMap<>();
-		params.put("securityRef", securityRef);
-		params.put("lastModified", new Date());
-		params.put("rootId", rootId);
-
 		records = jdbcUpdate(
 				"update ld_folder set ld_securityref = :securityRef, ld_lastmodified = :lastModified where not ld_id = :rootId "
 						+ " and ld_id in " + treeIdsString,
-				params);
+				Map.of("securityRef", securityRef, "lastModified", new Date(), ROOT_ID, rootId));
 
-		log.warn("Applied rights to {} folders in tree {}", records, rootId);
+		log.warn("Applied security to {} folders in tree {}", records, rootId);
 
 		/*
 		 * Delete all the specific rights associated to the folders in the tree
 		 */
-		jdbcUpdate("delete from ld_foldergroup where not ld_folderid = :rootId and ld_folderid in " + treeIdsString,
-				params);
+		jdbcUpdate("delete from ld_folder_acl where not ld_folderid = :rootId and ld_folderid in " + treeIdsString,
+				Map.of(ROOT_ID, rootId));
 		log.warn("Removed {} specific rights in tree {}", records, rootId);
 
 		if (getSessionFactory().getCache() != null) {
 			getSessionFactory().getCache().evictEntityData(Folder.class);
-			getSessionFactory().getCache().evictCollectionData(Folder.class.getCanonicalName() + ".folderGroups");
+			getSessionFactory().getCache().evictCollectionData(Folder.class.getCanonicalName() + ".accessControlList");
 		}
 	}
 
@@ -1348,9 +1328,9 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	public Folder create(Folder parent, Folder folderVO, boolean inheritSecurity, FolderHistory transaction)
 			throws PersistenceException {
 		parent = findFolder(parent);
-		if(!org.hibernate.Hibernate.isInitialized(parent.getAttributes()))
+		if (!org.hibernate.Hibernate.isInitialized(parent.getAttributes()))
 			initialize(parent);
-		
+
 		Folder folder = new Folder();
 		folder.setName(folderVO.getName());
 		folder.setType(folderVO.getType());
@@ -1384,17 +1364,17 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			userDAO.initialize(user);
 			if (!user.isMemberOf(Group.GROUP_ADMIN)) {
 				Group userGroup = user.getUserGroup();
-				FolderGroup fg = new FolderGroup(userGroup.getId());
-				fg.setAdd(1);
-				fg.setDelete(1);
-				fg.setDownload(1);
-				fg.setEmail(1);
-				fg.setPermissions(1);
-				fg.setRead(1);
-				fg.setSecurity(1);
-				fg.setRename(1);
-				fg.setWrite(1);
-				folder.addFolderGroup(fg);
+				AccessControlEntry ace = new AccessControlEntry(userGroup.getId());
+				ace.setAdd(1);
+				ace.setDelete(1);
+				ace.setDownload(1);
+				ace.setEmail(1);
+				ace.setSecurity(1);
+				ace.setRead(1);
+				ace.setSecurity(1);
+				ace.setRename(1);
+				ace.setWrite(1);
+				folder.addAccessControlEntry(ace);
 			}
 		}
 
@@ -1458,15 +1438,9 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 		while (st.hasMoreTokens()) {
 			String name = st.nextToken();
-
-			Map<String, Object> params = new HashMap<>();
-			params.put("folderId", folder.getId());
-			params.put("name", name);
-			params.put("tenantId", folder.getTenantId());
-
 			long child = queryForLong(
-					"SELECT ld_id FROM ld_folder WHERE ld_deleted=0 AND ld_parentid = :folderId AND ld_name = :name AND ld_tenantid = :tenantId",
-					params);
+					"select ld_id from ld_folder where ld_deleted=0 and ld_parentid = :folderId and ld_name = :name and ld_tenantid = :tenantId",
+					Map.of("folderId", folder.getId(), "name", name, "tenantId", folder.getTenantId()));
 
 			if (child == 0L) {
 				Folder folderVO = new Folder();
@@ -1504,7 +1478,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return folder;
 	}
 
-	@SuppressWarnings("unchecked")
 	private void setUniqueName(Folder folder) throws PersistenceException {
 		String folderName = folder.getName();
 		List<String> collisions = queryForList("select ld_name from ld_folder where ld_deleted=0 and ld_parentid="
@@ -1558,7 +1531,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 	private Folder internalCopy(Folder source, Folder target, String newName, boolean foldersOnly,
 			String securityOption, FolderHistory transaction) throws PersistenceException {
-		target = internatlCopyValidation(source, target, securityOption, transaction);
+		target = internalCopyValidation(source, target, securityOption, transaction);
 
 		// Create the same folder in the target
 		Folder newFolder = null;
@@ -1568,8 +1541,8 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 		replicateSecurityPolicies(source, securityOption, newFolder);
 
-		DocumentDAO docDao = (DocumentDAO) Context.get().getBean(DocumentDAO.class);
-		DocumentManager docMan = (DocumentManager) Context.get().getBean(DocumentManager.class);
+		DocumentDAO docDao = Context.get(DocumentDAO.class);
+		DocumentManager docMan = Context.get(DocumentManager.class);
 
 		// List source docs and create them in the new folder
 		if (!foldersOnly) {
@@ -1578,7 +1551,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			 * query(findByFolder) to run properly without exception due to
 			 * template.templateGroups
 			 */
-			TemplateDAO tDao = (TemplateDAO) Context.get().getBean(TemplateDAO.class);
+			TemplateDAO tDao = Context.get(TemplateDAO.class);
 			List<Template> templates = tDao.findAll(source.getTenantId());
 			for (Template template : templates)
 				tDao.initialize(template);
@@ -1607,8 +1580,8 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 				documentTransaction.setComment(transaction.getComment());
 				documentTransaction.setEvent(DocumentEvent.STORED.toString());
 
-				String oldDocResource = storer.getResourceName(srcDoc, null, null);
-				try (InputStream is = storer.getStream(srcDoc.getId(), oldDocResource);) {
+				String oldDocResource = store.getResourceName(srcDoc, null, null);
+				try (InputStream is = store.getStream(srcDoc.getId(), oldDocResource);) {
 					docMan.create(is, newDoc, documentTransaction);
 				} catch (IOException e) {
 					log.error(e.getMessage(), e);
@@ -1624,7 +1597,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return newFolder;
 	}
 
-	private Folder internatlCopyValidation(Folder source, Folder target, String securityOption,
+	private Folder internalCopyValidation(Folder source, Folder target, String securityOption,
 			FolderHistory transaction) throws PersistenceException {
 		if (!(securityOption == null || "inherit".equals(securityOption) || REPLICATE.equals(securityOption)))
 			throw new IllegalArgumentException("Invalid security option " + securityOption);
@@ -1653,10 +1626,9 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			if (source.getSecurityRef() != null) {
 				newFolder.setSecurityRef(source.getSecurityRef());
 			} else {
-				newFolder.getFolderGroups().clear();
-				for (FolderGroup fg : source.getFolderGroups()) {
-					newFolder.addFolderGroup(new FolderGroup(fg));
-				}
+				newFolder.getAccessControlList().clear();
+				for (AccessControlEntry ace : source.getAccessControlList())
+					newFolder.addAccessControlEntry(new AccessControlEntry(ace));
 			}
 			store(newFolder);
 		}
@@ -1764,7 +1736,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		 * Check if in the folders to be deleted there is at least one immutable
 		 * document
 		 */
-		@SuppressWarnings("unchecked")
 		List<Long> ids = queryForList(
 				"select ld_folderid from ld_document where ld_deleted=0 and ld_immutable=1 and ld_folderid in "
 						+ treeIdsString,
@@ -1785,8 +1756,8 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 		jdbcUpdate("update ld_folder set ld_deleteuserid=" + transaction.getUserId() + " where  ld_id in "
 				+ treeIdsString);
-		jdbcUpdate("update ld_folder set ld_deleteuser=:user where ld_id in "
-				+ treeIdsString, Map.of("user", transaction.getUser().getFullName()));
+		jdbcUpdate("update ld_folder set ld_deleteuser=:user where ld_id in " + treeIdsString,
+				Map.of("user", transaction.getUser().getFullName()));
 
 		/*
 		 * Delete the aliases
@@ -1804,9 +1775,9 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 		jdbcUpdate("update ld_document set ld_deleteuserid=" + transaction.getUserId() + " where  ld_folderid in "
 				+ treeIdsString);
-		jdbcUpdate("update ld_document set ld_deleteuser=:user where  ld_folderid in "
-				+ treeIdsString, Map.of("user", transaction.getUser().getFullName()));
-		
+		jdbcUpdate("update ld_document set ld_deleteuser=:user where  ld_folderid in " + treeIdsString,
+				Map.of("user", transaction.getUser().getFullName()));
+
 		if (getSessionFactory().getCache() != null)
 			getSessionFactory().getCache().evictEntityData(Folder.class);
 
@@ -1815,7 +1786,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return notDeletableFolders;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public Set<Long> findFolderIdInTree(long rootId, boolean includeDeleted) {
 		log.debug("findFolderIdInTree, rootID: {}, includeDeleted: {}", rootId, includeDeleted);
@@ -1865,7 +1835,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return ids;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public Set<Long> findFolderIdInPath(long rootId, boolean includeDeleted) throws PersistenceException {
 		Set<Long> ids = new HashSet<>();
@@ -1927,7 +1896,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 		// We do this way because if using the HQL we will have all the
 		// collections initialized
-		@SuppressWarnings("unchecked")
 		List<Long> wsIds = queryForList("select ld_id from ld_folder where (not ld_id=" + rootId
 				+ ") and ld_deleted=0 and ld_parentid=" + rootId + " and ld_type=" + Folder.TYPE_WORKSPACE
 				+ " and ld_tenantid=" + tenantId + " order by lower(ld_name)", Long.class);
@@ -1940,9 +1908,9 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	@Override
 	public void initialize(Folder folder) {
 		refresh(folder);
-		
-		if (folder.getFolderGroups() != null)
-			log.trace("Initialized {} folder groups", folder.getFolderGroups().size());
+
+		if (folder.getAccessControlList() != null)
+			log.trace("Initialized {} aces", folder.getAccessControlList().size());
 
 		if (folder.getTags() != null)
 			log.trace("Initialized {} tags", folder.getTags().size());
@@ -1950,8 +1918,8 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		if (folder.getAttributes() != null)
 			log.trace("Initialized {} attributes", folder.getAttributes().keySet().size());
 
-		if (folder.getStorages() != null)
-			log.trace("Initialized {} storages", folder.getStorages().keySet().size());
+		if (folder.getStores() != null)
+			log.trace("Initialized {} stores", folder.getStores().keySet().size());
 	}
 
 	@SuppressWarnings("unchecked")
@@ -1998,18 +1966,15 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		if (root == null)
 			return null;
 
-		List<Folder> workspaces = findByWhere(ENTITY + PARENTID_EQUAL + root.getId() + AND + ENTITY + ".name = '"
-				+ SqlUtil.doubleQuotes(Folder.DEFAULTWORKSPACENAME) + "' and " + ENTITY + TENANT_ID_EQUAL + tenantId
-				+ AND + ENTITY + ".type=" + Folder.TYPE_WORKSPACE, null, null);
+		List<Folder> workspaces = findByWhere(
+				ENTITY + PARENTID_EQUAL + root.getId() + AND + ENTITY + ".name = :wfName" + " and " + ENTITY
+						+ TENANT_ID_EQUAL + tenantId + AND + ENTITY + ".type=" + Folder.TYPE_WORKSPACE,
+				Map.of("wfName", Folder.DEFAULTWORKSPACENAME), null, null);
 
 		if (workspaces.isEmpty())
 			return null;
 		else
 			return workspaces.get(0);
-	}
-
-	public void setStorer(Storer storer) {
-		this.storer = storer;
 	}
 
 	@Override
@@ -2030,7 +1995,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		store(f, transaction);
 
 		// Now all the folders that are referencing this one must be updated
-		bulkUpdate("set securityRef=" + securityRef + " where securityRef=" + folderId, (Map<String, Object>) null);
+		bulkUpdate("set securityRef=" + securityRef + " where securityRef=" + folderId, null);
 	}
 
 	@Override
@@ -2050,7 +2015,18 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			return 0;
 		}
 	}
-
+	
+	@Override
+	public long countDocs(long folderId) {
+		try {
+			Folder folder= findFolder(folderId);
+			return queryForLong("SELECT COUNT(*) from ld_document WHERE ld_deleted=0 and ld_folderid="+folder.getId());
+		} catch (PersistenceException e) {
+			log.error(e.getMessage(), e);
+			return 0;
+		}
+	}
+	
 	@Override
 	public long computeTreeSize(long rootId) {
 		try {
@@ -2205,7 +2181,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	}
 
 	@Override
-	public void applyStorageToTree(long id, FolderHistory transaction) throws PersistenceException {
+	public void applyStoreToTree(long id, FolderHistory transaction) throws PersistenceException {
 		Folder parent = getExistingFolder(id);
 		initialize(parent);
 
@@ -2214,10 +2190,10 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		transaction.setNotifyEvent(false);
 
 		// Iterate over all children setting the template and field values
-		List<Folder> children = findChildren(id, null);
+		List<Folder> children = findByParentId(id);
 		for (Folder folder : children) {
 			initialize(folder);
-			folder.setStorage(parent.getStorage());
+			folder.setStore(parent.getStore());
 
 			FolderHistory tr = new FolderHistory(transaction);
 			tr.setFolderId(folder.getId());
@@ -2225,7 +2201,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			store(folder, tr);
 			flush();
 
-			applyStorageToTree(folder.getId(), transaction);
+			applyStoreToTree(folder.getId(), transaction);
 		}
 	}
 
@@ -2238,7 +2214,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		transaction.setNotifyEvent(false);
 
 		// Iterate over all children setting the template and field values
-		List<Folder> children = findChildren(id, null);
+		List<Folder> children = findByParentId(id);
 		for (Folder folder : children) {
 			initialize(folder);
 			folder.setOcrTemplateId(parent.getOcrTemplateId());
@@ -2254,7 +2230,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		}
 	}
 
-	@SuppressWarnings("unchecked")
 	public List<Long> findFolderIdByTag(String tag) {
 		StringBuilder query = new StringBuilder(
 				"select distinct(A.ld_folderid) from ld_foldertag A, ld_folder B where A.ld_folderid=B.ld_id and B.ld_deleted= 0");
@@ -2305,7 +2280,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 			query.append(" AND D.ld_tag = '" + SqlUtil.doubleQuotes(tag) + "' ");
 
-			@SuppressWarnings("unchecked")
 			List<Long> folderIds = queryForList(query.toString(), Long.class);
 			ids.addAll(folderIds);
 		}
@@ -2313,7 +2287,6 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		return ids;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	public List<Folder> findByUserIdAndTag(long userId, String tag, Integer max) throws PersistenceException {
 		List<Folder> coll = new ArrayList<>();
@@ -2327,14 +2300,13 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 		query.append(")");
 
 		try {
-			coll = findByQuery(query.toString(), (Map<String, Object>) null, max);
+			coll = findByObjectQuery(query.toString(), (Map<String, Object>) null, max);
 		} catch (PersistenceException e) {
 			log.error(e.getMessage(), e);
 		}
 		return coll;
 	}
 
-	@SuppressWarnings("unchecked")
 	public List<String> findTags(long folderId) {
 		try {
 			return queryForList("select ld_tag from ld_foldertag where ld_folderid=" + folderId + " order by ld_tag",
@@ -2393,7 +2365,7 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 
 	private void deleteEmptySourceFolders(Folder source, FolderHistory transaction) throws PersistenceException {
 		log.debug("delete the empty source folder {}", source);
-		DocumentDAO docDao = (DocumentDAO) Context.get().getBean(DocumentDAO.class);
+		DocumentDAO docDao = Context.get(DocumentDAO.class);
 		if (docDao.findByFolder(source.getId(), null).isEmpty() && findByParentId(source.getId()).isEmpty())
 			delete(source.getId(), new FolderHistory(transaction));
 	}
@@ -2414,8 +2386,8 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 	private void moveDocumentsOnMerge(Folder source, Folder target, FolderHistory transaction, Session session)
 			throws PersistenceException {
 		log.debug("move documents fom folder {} to folder {}", source, target);
-		DocumentManager manager = (DocumentManager) Context.get().getBean(DocumentManager.class);
-		DocumentDAO docDao = (DocumentDAO) Context.get().getBean(DocumentDAO.class);
+		DocumentManager manager = Context.get(DocumentManager.class);
+		DocumentDAO docDao = Context.get(DocumentDAO.class);
 		List<Document> docs = docDao.findByFolder(source.getId(), null);
 		for (Document document : docs) {
 			DocumentHistory hist = new DocumentHistory();
@@ -2426,9 +2398,5 @@ public class HibernateFolderDAO extends HibernatePersistentObjectDAO<Folder> imp
 			hist.setUser(transaction.getUser());
 			manager.moveToFolder(document, target, hist);
 		}
-	}
-
-	public void setListenerManager(FolderListenerManager listenerManager) {
-		this.listenerManager = listenerManager;
 	}
 }
